examples/sub-net/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service
spec:
  hosts:
    - "www.test.com"
  gateways:
    - gateway
  http:
    - name: "v1-route"
      match:
        - uri:
            prefix: "/v1/hello"
      rewrite:
        uri: "/hello"
      route:
        - destination:
            host: my-ws
            subset: version-v1
            port:
              number: 8080
    - name: "v2-route"
      match:
        - uri:
            prefix: "/v2/hello"
      rewrite:
        uri: "/hello"
      route:
        - destination:
            host: my-ws
            subset: version-v2
            port:
              number: 8080
